# sample_distr

./: .gitignore  pyproject.toml
sample_distr/: __init__.py  _univariate.py
sampled_distr/: __init__.py  _univariate.py
tests/: test_sample_distr.py  test_sampled_distr.py
